force-app/main/default/objects/Stock_Request_Line_Item__c/Stock_Request_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Stock Request Item</label>
    <nameField>
        <displayFormat>SRI-{00000}</displayFormat>
        <label>Stock Request Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Request Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>