force-app/main/default/objects/Stock_Request_Line_Item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Request Items</relationshipLabel>
    <relationshipName>Stock_Request_Items</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>