force-app/main/default/objects/Stock_Request_Line_Item__c/fields/Purchase_Manager__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stock Request Items (Purchase Manager)</relationshipLabel>
    <relationshipName>Stock_Request_Items_Purchase_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>