force-app/main/default/objects/Stock_Request_Line_Item__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <defaultValue>$User.Id</defaultValue>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stock Request Items (Requested By)</relationshipLabel>
    <relationshipName>Stock_Request_Items_Requested</relationshipName>
    <type>Lookup</type>
</CustomField>